--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
      <div class="team container">
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhupeijiang.jpg"  class="img-responsive img-circle img-small" width="100px" height="100px" alt="" >
+                <img src="images/zhupeijiang.png"  class="img-responsive img-circle img-small" width="100px" height="100px" alt="" >
                 <h4>Peijiang Zhu<br><span class="blue-txt">Co-Founder of PalletOne
 community</span></h4>
                 <div class="tex">
@@ -372,7 +372,7 @@ Acquired master degaree from the university of Texas at Austin.
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/zengyi.jpg"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
+                <img src="images/zengyi.png"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
                 <h4>Yi Zeng<br><span class="blue-txt">PalletOne Co-founder&CTO</span></h4>
                 <div class="tex">
                     <h2>Yi Zeng</h2>
@@ -384,7 +384,7 @@ Acquired master degaree from the university of Texas at Austin.
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/wangcuicui.jpg"  class="img-responsive img-circle img-small" width="100px" height="100px" alt="" >
+                <img src="images/wangcuicui.png"  class="img-responsive img-circle img-small" width="100px" height="100px" alt="" >
                 <h4>Cuicui Wang<br><span class="blue-txt">PalletOne Co-founder&System Analyst</span></h4>
                 <div class="tex">
                     <h2>Cuicui Wang</h2>
@@ -395,7 +395,7 @@ Acquired master degaree from the university of Texas at Austin.
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/chenzhenguo.jpg"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
+                <img src="images/chenzhenguo.png"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
                 <h4>Kenneth Che<br><span class="blue-txt">Co-Founder of PalletOne community</span></h4>
                 <div class="tex">
                     <h2>Kenneth Che</h2>
@@ -408,7 +408,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/liujian.jpg"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
+                <img src="images/liujian.png"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
                 <h4>Dr.Jian Liu<br><span class="blue-txt">Specialist of PalletOne</span></h4>
                 <div class="tex">
                     <h2>Dr.Jian Liu</h2>
@@ -430,7 +430,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/shiningning.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/shiningning.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Ningning Shi<br><span class="blue-txt">Specialist of PalletOne</span></h4>
                 <div class="tex">
                     <h2>Ningning Shi</h2>
@@ -441,7 +441,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/maoxiaojun.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/maoxiaojun.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Xiaojun Mao<br><span class="blue-txt">PalletOne CMO</span></h4>
                 <div class="tex">
                     <h2>Xiaojun Mao</h2>
@@ -452,7 +452,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/liudonghai.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/liudonghai.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Donghai Liu<br><span class="blue-txt">PalletOne director of operation</span></h4>
                 <div class="tex">
                     <h2>Donghai Liu</h2>
@@ -463,7 +463,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/fengminsen.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/fengminsen.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Minsen Feng<br><span class="blue-txt">PalletOne Asia-Pacific Marketing Director</span></h4>
                 <div class="tex">
                     <h2>Minsen Feng</h2>
@@ -474,7 +474,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/zhaoxiang.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhaoxiang.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Xiang Zhao<br><span class="blue-txt">PalletOne Asia-Pacific Marketing Director</span></h4>
                 <div class="tex">
                     <h2>Xiang Zhao</h2>
@@ -485,7 +485,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhangzheng.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhangzheng.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Zheng Zhang<br><span class="blue-txt">alletOne manager of operation</span></h4>
                 <div class="tex">
                     <h2>Zheng Zhang</h2>
@@ -496,7 +496,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/yangyu.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/yangyu.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Yu Yang<br><span class="blue-txt">PalletOne Distributed Storage DAG Module Leader</span></h4>
                 <div class="tex">
                     <h2>Yu Yang</h2>
@@ -507,7 +507,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/guolihua.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/guolihua.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Lihua Guo<br><span class="blue-txt">PalletOne senior engineer<br>leader of virtual machine and contract management module</span></h4>
                 <div class="tex">
                     <h2>Lihua Guo</h2>
@@ -518,7 +518,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/wangjiyou.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wangjiyou.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Jiyou Wang<br><span class="blue-txt">Leader of the PalletOne code framework and p2p network module</span></h4>
                 <div class="tex">
                     <h2>Jiyou Wang</h2>
@@ -529,7 +529,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/yangjie.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/yangjie.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Jie Yang<br><span class="blue-txt">PalletOne development engineer<br>storage DAG and memory management</span></h4>
                 <div class="tex">
                     <h2>Jie Yang</h2>
@@ -540,7 +540,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/gouguangquan.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/gouguangquan.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Albert·Gou<br><span class="blue-txt">PalletOne core development engineer<br>leader of consensus algorithm module</span></h4>
                 <div class="tex">
                     <h2>Albert·Gou</h2>
@@ -551,7 +551,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhangxiangli.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhangxiangli.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Xiangli Zhang<br><span class="blue-txt">PalletOne Senior Core R&D Engineer<br>manager of the underlying chain transaction adapter model</span></h4>
                 <div class="tex">
                     <h2>Xiangli Zhang</h2>
@@ -562,7 +562,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/wangligang.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wangligang.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Ligang Wang<br><span class="blue-txt">PalletOne Senior Development Engineer<br>leader of chain data API and wallet service module</span></h4>
                 <div class="tex">
                     <h2>Ligang Wang</h2>
@@ -573,7 +573,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/wuzhiyuan.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wuzhiyuan.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>Zhiyuan Wu<br><span class="blue-txt">PalletOne Senior Development Engineer<br>head of system contract module</span></h4>
                 <div class="tex">
                     <h2>Zhiyuan Wu</h2>
