--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -327,7 +327,7 @@ ui,#qq{display:inline}
      <div class="team container">
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhupeijiang.jpg"  class="img-responsive img-circle img-small" alt="">
+                <img src="images/zhupeijiang.png"  class="img-responsive img-circle img-small" alt="">
                 <h4>朱佩江<br><span class="blue-txt">PalletOne联合创始、CEO<br>中关村区块链产业联盟秘书长</span></h4>
                 <div class="tex">
                     <h2>朱佩江</h2>
@@ -351,7 +351,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/zengyi.jpg"  class="img-responsive img-circle img-small" alt="">
+                <img src="images/zengyi.png"  class="img-responsive img-circle img-small" alt="">
                 <h4>曾毅<br><span class="blue-txt">PalletOne联合创始人、CTO</span></h4>
                 <div class="tex" style="height: 356px;">
                     <h2>曾毅</h2>
@@ -364,7 +364,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/wangcuicui.jpg"  class="img-responsive img-circle img-small"  alt="" >
+                <img src="images/wangcuicui.png"  class="img-responsive img-circle img-small"  alt="" >
                 <h4>王翠翠<br><span class="blue-txt">PalletOne联合创始人、系统分析师</span></h4>
                 <div class="tex">
                     <h2>王翠翠</h2>
@@ -375,7 +375,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/chenzhenguo.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/chenzhenguo.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>陈振国<br><span class="blue-txt">PalletOne团队系统分析专家</span></h4>
                 <div class="tex">
                     <h2>陈振国</h2>
@@ -386,7 +386,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/liujian.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/liujian.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>刘健<br><span class="blue-txt">PalletOne团队系统分析专家</span></h4>
                 <div class="tex">
                     <h2>刘健</h2>
@@ -408,7 +408,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/shiningning.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/shiningning.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>史宁宁<br><span class="blue-txt">PalletOne团队运维专家</span></h4>
                 <div class="tex">
                     <h2>史宁宁</h2>
@@ -419,7 +419,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/maoxiaojun.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/maoxiaojun.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>毛晓君<br><span class="blue-txt">PalletOne CMO</span></h4>
                 <div class="tex">
                     <h2>毛晓君</h2>
@@ -430,7 +430,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/liudonghai.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/liudonghai.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>刘东海<br><span class="blue-txt">PalletOne 运营总监</span></h4>
                 <div class="tex">
                     <h2>刘东海</h2>
@@ -441,7 +441,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/fengminsen.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/fengminsen.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>冯敏森<br><span class="blue-txt">PalletOne 亚太市场运营总监</span></h4>
                 <div class="tex">
                     <h2>冯敏森</h2>
@@ -452,7 +452,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/zhaoxiang.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhaoxiang.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>赵祥<br><span class="blue-txt">PalletOne 亚太市场运营总监</span></h4>
                 <div class="tex">
                     <h2>赵祥</h2>
@@ -463,7 +463,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhangzheng.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhangzheng.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>张政<br><span class="blue-txt">PalletOne 运营经理</span></h4>
                 <div class="tex">
                     <h2>张政</h2>
@@ -474,7 +474,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/yangyu.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/yangyu.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>杨渝<br><span class="blue-txt">PalletOne分布式存储DAG模块负责人</span></h4>
                 <div class="tex">
                     <h2>杨渝</h2>
@@ -485,7 +485,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/guolihua.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/guolihua.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>郭立华<br><span class="blue-txt">PalletOne高级工程师<br>虚拟机及合约管理模块负责人</span></h4>
                 <div class="tex">
                     <h2>郭立华</h2>
@@ -496,7 +496,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/wangjiyou.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wangjiyou.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>王继有<br><span class="blue-txt">PalletOne代码框架及p2p网络模块负责人</span></h4>
                 <div class="tex">
                     <h2>王继有</h2>
@@ -507,7 +507,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/yangjie.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/yangjie.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>杨杰<br><span class="blue-txt">PalletOne开发工程师<br>分布式存储DAG及内存管理模块支持</span></h4>
                 <div class="tex">
                     <h2>杨杰</h2>
@@ -518,7 +518,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/gouguangquan.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/gouguangquan.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>苟光泉<br><span class="blue-txt">PalletOne核心开发工程师<br>共识算法模块负责人</span></h4>
                 <div class="tex">
                     <h2>苟光泉</h2>
@@ -529,7 +529,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
-                <img src="images/zhangxiangli.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/zhangxiangli.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>张祥利<br><span class="blue-txt">PalletOne高级核心开发工程师<br>各底层链交易适配器模式负责人</span></h4>
                 <div class="tex">
                     <h2>张祥利</h2>
@@ -540,7 +540,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
-                <img src="images/wangligang.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wangligang.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>王立刚<br><span class="blue-txt">PalletOne高级开发工程师<br>底层链数据API及钱包服务模块负责人</span></h4>
                 <div class="tex">
                     <h2>王立刚</h2>
@@ -551,7 +551,7 @@ ui,#qq{display:inline}
         </div>
         <div class="col-sm-4 wow fadeInRight animated">
             <div class="team-member">
-                <img src="images/wuzhiyuan.jpg"  class="img-responsive img-circle img-small" alt="" >
+                <img src="images/wuzhiyuan.png"  class="img-responsive img-circle img-small" alt="" >
                 <h4>吴志远<br><span class="blue-txt">PalletOne高级开发工程师<br>系统合约模块负责人</span></h4>
                 <div class="tex">
                     <h2>吴志远</h2>
