modify images  show style

--- a/wap/index.html
+++ b/wap/index.html
@@ -600,27 +600,27 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
                    Investment Funds<br>
                 </h1>
                 <div class="testimonials-text">
-                    <img src="../images/yuandaoziben.png" height="144.15" width="142.6">
-					<img src="../images/bitrise.jpg" height="144.15" width="142.6">
-					<img src="../images/bwfund.jpg" height="144.15" width="142.6">
-					<img src="../images/danhua.png" height="144.15" width="142.6">
-                    <img src="../images/genesis.jpg" height="144.15" width="142.6">
-                    <img src="../images/hcapital.jpg" height="144.15" width="142.6">
-                    <img src="../images/jiedian.png" height="144.15" width="162.6">
-                    <img src="../images/linkvc.png" height="144.15" width="142.6">
+                    <img src="../images/yuandaoziben.png">
+					<img src="../images/bitrise.jpg">
+					<img src="../images/bwfund.jpg">
+					<img src="../images/danhua.png">
+                    <img src="../images/genesis.jpg">
+                    <img src="../images/hcapital.jpg">
+                    <img src="../images/jiedian.png">
+                    <img src="../images/linkvc.png">
                 </div>
                 <div class="testimonials-text">
-                    <img src="../images/funds.png" height="144.15" width="142.6">
-                    <img src="../images/6.jpg" height="144.15" width="142.6">
-                    <img src="../images/5.jpg" height="144.15" width="142.6">
-                    <img src="../images/yinli.jpg" height="144.15" width="142.6">
-                    <img src="../images/8.jpg" height="144.15" width="142.6">
-                    <img src="../images/7.png" height="144.15" width="142.6">
+                    <img src="../images/funds.png" >
+                    <img src="../images/6.jpg" >
+                    <img src="../images/5.jpg" >
+                    <img src="../images/yinli.jpg" >
+                    <img src="../images/8.jpg" >
+                    <img src="../images/7.png" >
                 </div>
 				<div class="testimonials-text wow bounceIn animated">
-				<img src="../images/2.jpg" height="80.15" width="370.6">
-				<img src="../images/3.jpg" height="80.15" width="370.6">
-				<img src="../images/4.jpg" height="80.15" width="370.6">
+				<img src="../images/2.jpg" >
+				<img src="../images/3.jpg" >
+				<img src="../images/4.jpg" >
 				</div>
             </div>
         </div>
