Update reference url

--- a/beifen/index.html
+++ b/beifen/index.html
@@ -506,7 +506,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
 						<a href="#"><img src="images/icon-bird.png" width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/palletone.protocol"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
 						<a href="https://t.me/palletchinese"><img src="images/telegram.png"  width="30" height="30"></a>
