--- a/beifen/wap/index.html
+++ b/beifen/wap/index.html
@@ -600,7 +600,7 @@ or’s degree and a master’s degree in computer science of Tsinghua University
                 <ul class="list-inline pull-right">
                     <li><a href="#"><img src="images/icon-bird.png"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/palletone.protocol"><img src="images/icon-f.png"></a>
                     </li>
                     <li><a href="https://t.me/palletchinese"><img src="images/telegram.png"></a>
                     </li>
