--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -727,7 +727,7 @@ ui,#qq{display:inline}
 						<a href="https://twitter.com/PalletOne_org" target="view_window"><img src="images/icon-bird.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/palletone.protocol" target="view_window"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
 						<a href="https://t.me/palletchinese" target="view_window"><img src="images/telegram.png"  width="30" height="30"></a>
