--- a/wap/index.html
+++ b/wap/index.html
@@ -701,9 +701,9 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
                 <ul class="list-inline pull-right">
                     <li><a href="https://twitter.com/PalletOne_org" target="view_window"><img src="../images/icon-bird.png"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="../images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/palletone.protocol" target="view_window"><img src="../images/icon-f.png"></a>
                     </li>
-                    <li><a href="https://t.me/PalletOneGlobal" target="view_window"><img src="../images/telegram.png"></a>
+                    <li><a href="https://t.me/PalletOneOfficialEN" target="view_window"><img src="../images/telegram.png"></a>
                     </li>
                     <li id="qq" style="position: relative">
                         <div style="width: 100px;height:100px;position: absolute;top:-115px;left:-36px;z-index: 999;display: none;" id="showWx">
