--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -694,7 +694,7 @@
                 <ul class="list-inline pull-right">
                     <li><a href="https://twitter.com/PalletOne_org" target="view_window"><img src="../images/icon-bird.png"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="../images/icon-f.png"></a>
+                    <li><a href="https://www.facebook.com/palletone.protocol" target="view_window"><img src="../images/icon-f.png"></a>
                     </li>
                     <li><a href="https://t.me/palletchinese" target="view_window"><img src="../images/telegram.png"></a>
                     </li>
