--- a/beifen/index_zh_cn.html
+++ b/beifen/index_zh_cn.html
@@ -497,7 +497,7 @@ ui,#qq{display:inline}
 						<a href="#"><img src="images/icon-bird.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="https://www.facebook.com/profile.php?id=100026164972741"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/palletone.protocol"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
 						<a href="https://t.me/palletchinese"><img src="images/telegram.png"  width="30" height="30"></a>
