--- a/index.html
+++ b/index.html
@@ -703,10 +703,10 @@ group，president of China Engineering Research Institute of Sun. Got a bacherlo
 						<a href="https://twitter.com/PalletOne_org" target="view_window"><img src="images/icon-bird.png" width="30" height="30"></a>
                     </li>
                     <li id="qq">
-						<a href="https://www.facebook.com/profile.php?id=100026164972741" target="view_window"><img src="images/icon-f.png"  width="30" height="30"></a>
+						<a href="https://www.facebook.com/palletone.protocol" target="view_window"><img src="images/icon-f.png"  width="30" height="30"></a>
                     </li>
 					<li id="qq">
-						<a href="https://t.me/PalletOneGlobal" target="view_window"><img src="images/telegram.png"  width="30" height="30"></a>
+						<a href="https://t.me/PalletOneOfficialEN" target="view_window"><img src="images/telegram.png"  width="30" height="30"></a>
                     </li>
                     <li id="qq" style="position: relative">
                         <div style="width: 100px;height:100px;position: absolute;top:-115px;left:-36px;z-index: 999;display: none;" id="showWx">
