--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ Acquired master degaree from the university of Texas at Austin.
         <div class="col-sm-4" style="margin:0 100px">
             <div class="team-member">
                 <img src="images/chenzhenguo.png"  class="img-responsive img-circle img-small" alt="" width="100px" height="100px" >
-                <h4>Kenneth Che<br><span class="blue-txt">Co-Founder of PalletOne community</span></h4>
+                <h4>Kenneth Chen<br><span class="blue-txt">Co-Founder of PalletOne community</span></h4>
                 <div class="tex">
                     <h2>Kenneth Che</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-Founder & CTO of GenieNRM
@@ -486,7 +486,7 @@ Co-Founder & CTO of Datamite Technology 20 years experience in products design a
         <div class="col-sm-4 wow fadeInLeft animated">
             <div class="team-member">
                 <img src="images/zhangzheng.png"  class="img-responsive img-circle img-small" alt="" >
-                <h4>Zheng Zhang<br><span class="blue-txt">alletOne manager of operation</span></h4>
+                <h4>Zheng Zhang<br><span class="blue-txt">PalletOne manager of operation</span></h4>
                 <div class="tex">
                     <h2>Zheng Zhang</h2>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;COO for STARTHALO (Beijing) Media Technology Co., Ltd.</p>
