--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -322,7 +322,7 @@
                             <span class="blue-txt">PalletOne联合创始人、系统分析师</span></h4>
                         <div class="tex">
                             <h2>王翠翠</h2>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;曾任中关村区块链产业联盟副秘书长，清华链网联合实验室高级研究员。并就职于百度及国家级主管部门下属研究机构。擅长网络安全、网络流量分析、区块链等领域研究和相关标准的制定工作，在相关领域发表论文、专利十余篇。</p>
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;北京邮电大学信号与信息处理专业硕士，中关村区块链产业联盟副秘书长，清华链网联合实验室高级研究员。曾百度及国家级主管部门下属研究机构。擅长网络安全、网络流量分析、区块链等领域研究和相关标准的制定工作。</p>
                         </div>
                     </div>
                 </div>
