modify investment funds imags show style

--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -578,28 +578,28 @@
             </div>
         </div>
         <div class="g-title">投资机构
-            <br></div>
-        <div class="testimonials-text wow bounceIn animated" width="600">
-            <img src="images/yuandaoziben.png" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/funds.png" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/yinli.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/7.png" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/6.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/8.jpg" height="120" width="120" style="margin:0px 10px 0px 0px">
-            <img src="images/2.jpg" height="120" width="220" style="margin:0px 10px 0px 0px"></div>
-        <div class="testimonials-text wow bounceIn animated" width="600" style="margin: 10px auto;">
-            <img src="images/4.jpg" height="120" width="320" style="margin:0px 10px 0px 0px">
-            <img src="images/bitrise.jpg" height="120" width="420" style="margin:0px 10px 0px 0px">
-            <img src="images/bwfund.jpg" height="120" width="260" style="margin:0px 10px 0px 0px"></div>
-        <div class="testimonials-text wow bounceIn animated" width="600">
-            <img src="images/5.jpg" height="120" width="240" style="margin:0px 10px 0px 0px">
-            <img src="images/3.jpg" height="120" width="250">
-            <img src="images/danhua.png" height="120" width="220" style="margin:0px 10px 0px 0px">
-            <img src="images/hcapital.jpg" height="120" width="250" style="margin:0px 10px 0px 0px"></div>
-        <div class="testimonials-text wow bounceIn animated" width="600">
-            <img src="images/genesis.jpg" height="120" width="170" style="margin:0px 10px 0px 0px">
-            <img src="images/jiedian.png" height="120" width="400" style="margin:0px 10px 0px 0px">
-            <img src="images/linkvc.png" height="120" width="400" style="margin:0px 10px 0px 0px"></div>
+            <br></div><div class="testimonials-text wow bounceIn animated">
+            <img src="images/yuandaoziben.png" height="120" width="135">
+            <img src="images/6.jpg" height="120" width="135">
+            <img src="images/5.jpg" height="120" width="135">
+            <img src="images/8.jpg" height="120" width="135">
+            <img src="images/7.png" height="120" width="135">
+            <img src="images/funds.png" height="120" width="135">
+            <img src="images/yinli.jpg" height="120" width="135">
+            <img src="images/hcapital.jpg" height="120" width="135">
+        </div>
+        <div class="testimonials-text wow bounceIn animated" style="margin: 10px auto;">
+            <img src="images/2.jpg" height="120" width="210">
+            <img src="images/3.jpg" height="120" width="230">
+            <img src="images/4.jpg" height="120" width="220">
+            <img src="images/bitrise.jpg" height="120" width="210">
+            <img src="images/linkvc.png" height="120" width="230">
+        </div>
+        <div class="testimonials-text wow bounceIn animated">
+            <img src="images/bwfund.jpg" height="120" width="230">
+            <img src="images/jiedian.png" height="120" width="400">
+            <img src="images/danhua.png" height="120" width="230">
+            <img src="images/genesis.jpg" height="120" width="240">
         </div>
         <div class="wrap1200 QA" id="QA">
             <div class="g-title">问答</div>
