--- a/index_zh_cn.html
+++ b/index_zh_cn.html
@@ -506,7 +506,7 @@
                                 <br>各底层链交易适配器模式负责人</span></h4>
                         <div class="tex">
                             <h2>张祥利</h2>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;拥有九年c/cpp开发经验。熟悉加解密算法、比特币，对数据结构和算法有较深入的理解，区块链热爱者，技术极客。</p>
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;拥有九年c/cpp开发经验。熟悉加解密算法、比特币，对数据结构和算法有较深入的理解，区块链热爱者。</p>
                         </div>
                     </div>
                 </div>
