--- a/wap/index_zh_cn.html
+++ b/wap/index_zh_cn.html
@@ -325,7 +325,7 @@
                                     <h4>王翠翠
                                         <br>
                                         <span class="blue-txt">PalletOne联合创始人、系统分析师</span></h4>
-                                    <p class="text-left">曾任中关村区块链产业联盟副秘书长，清华链网联合实验室高级研究员。并就职于百度及国家级主管部门下属研究机构。擅长网络安全、网络流量分析、区块链等领域研究和相关标准的制定工作，在相关领域发表论文、专利十余篇。</p></div>
+                                    <p class="text-left">京邮电大学信号与信息处理专业硕士，中关村区块链产业联盟副秘书长，清华链网联合实验室高级研究员。曾百度及国家级主管部门下属研究机构。擅长网络安全、网络流量分析、区块链等领域研究和相关标准的制定工作。</p></div>
                             </div>
                             <div class="col-sm-4 wow fadeInRight swiper-slide">
                                 <div class="team-member" style="height: 370px;">
@@ -449,7 +449,7 @@
                                         <br>
                                         <span class="blue-txt">PalletOne高级核心开发工程师
                                             <br>各底层链交易适配器模式负责人</span></h4>
-                                    <p class="text-left">拥有九年c/cpp开发经验。熟悉加解密算法、比特币，对数据结构和算法有较深入的理解，区块链热爱者，技术极客。</p></div>
+                                    <p class="text-left">拥有九年c/cpp开发经验。熟悉加解密算法、比特币，对数据结构和算法有较深入的理解，区块链热爱者。</p></div>
                             </div>
                             <div class="col-sm-4 wow fadeInLeft swiper-slide">
                                 <div class="team-member" style="height: 370px;">
